--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "docusaurus": "docusaurus",
     "start": "docusaurus start",
     "build": "docusaurus build",
+    "deploy": "npm run build && firebase deploy",
+    "docusaurus": "docusaurus",
     "swizzle": "docusaurus swizzle",
-    "deploy": "docusaurus deploy",
+    "docusaurus-deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
