--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@docusaurus/preset-classic": "3.1.1",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
+    "docusaurus-plugin-sass": "^0.2.5",
     "firebase": "^10.8.1",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "sass": "^1.72.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.1.1",
