--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@docusaurus/preset-classic": "3.1.1",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
+    "docusaurus-plugin-dotenv": "^1.0.1",
     "docusaurus-plugin-sass": "^0.2.5",
     "firebase": "^10.8.1",
     "prism-react-renderer": "^2.3.0",
